--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link type="text/css" href="{{url_for('static', filename='css/styles.css')}}" rel="stylesheet"/>
     <meta charset="UTF-8">
     {% block title -%}
     {% if title %}
@@ -13,17 +14,20 @@
 <body>
 {% block content -%}
     {%- block mainmenu -%}
-<ul>
+<ul class="mainmenu" >
     {%for m in menu -%}
-    <li>{{m}}</li>
+    <li><a href="{{m.url}}">{{m.name}}</a></li>
     {% endfor -%}
 </ul>
     {% endblock mainmenu -%}
+<div class="clear"></div>
+<div class="content">
     {% if title -%}
 <h1>{{title}}</h1>
     {% else -%}
 <h1>About Flask</h1>
     {% endif -%}
 {% endblock -%}
+</div>
 </body>
 </html>
